Swaggger and readme update | code update
